# local-routing-wspd

./: .gitignore  CMakeLists.txt  GraphicsViewPointInput.h  Path_wspd.h  PointNumbersGraphicsItem.h  Point_wsp.h  WSPDGraphicsItem.h  WSP_iterator.h  counter_3edges.txt  counter_example_2.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mt.txt  points.txt  test.txt  util.cpp  util.h
Search_filter/: Base_search_filter.h  Bigger_smallest_bbox_filter.h  Biggest_bbox_filter.h  Biggest_bbox_ws_filter.h  Bounded_biggest_bbox_filter.h  Direction_filter.h  Edge_inside_filter.h  Euclidean_filter.h  Search_filter_composer.h  Src_inside_filter.h  X_monotone_filter.h  filters.h
